deployment/legacy/legacy-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: url-shortener-web
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: url-shortener-server
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: url-shortener-db
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
