deployment/legacy/legacy-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: frontend
            port:
              number: 80
  - http:
      paths:
      - path: /ws
        pathType: Exact
        backend:
          service:
            name: frontend
            port:
              number: 80
  - http:
      paths:
      - path: /static/
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - http:
      paths:
      - path: /shorten
        pathType: Exact
        backend:
          service:
            name: backend
            port:
              number: 80
  - http:
      paths:
      - path: /??????
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 80
